@@ -80,7 +80,9 @@ require 'lobbyist/v2/company_transaction'
 require 'lobbyist/v2/company_user'
 require 'lobbyist/v2/company'
 require 'lobbyist/v2/contact'
+require 'lobbyist/v2/customer_call_credit'
 require 'lobbyist/v2/customer_call_metrics'
+require 'lobbyist/v2/customer_call'
 require 'lobbyist/v2/customer'
 require 'lobbyist/v2/data_upload'
 require 'lobbyist/v2/email_invitation_metrics'
