@@ -1,3 +1,5 @@
+* Added Customer Call proxy model for V2 API.
+
 === 0.5.8 2014-05-28
 
 * Removed old metrics calls from Enterprise and Company.
